LBT-7047 Migrate to function-groups service api v1